[gd_scene load_steps=10 format=3 uid="uid://hu558507fw2t"]

[ext_resource type="Script" uid="uid://by2wrk5sinhbe" path="res://barkley2/scenes/_utilityStation/gun_status.gd" id="1_ndwdf"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="2_4fmca"]
[ext_resource type="FontFile" uid="uid://b6ag0xl5d2ibh" path="res://barkley2/resources/fonts/fn2c.tres" id="3_36ue7"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="4_lot7k"]
[ext_resource type="FontFile" uid="uid://c5asr1c5g1w6h" path="res://barkley2/resources/fonts/fn_small.tres" id="5_82gql"]

[sub_resource type="LabelSettings" id="LabelSettings_sqt2l"]
font = ExtResource("2_4fmca")

[sub_resource type="LabelSettings" id="LabelSettings_tn1ex"]
font = ExtResource("3_36ue7")

[sub_resource type="LabelSettings" id="LabelSettings_iyqur"]
font = ExtResource("4_lot7k")

[sub_resource type="LabelSettings" id="LabelSettings_t58kc"]
font = ExtResource("5_82gql")

[node name="gun_slot" type="Control"]
custom_minimum_size = Vector2(280, 24)
layout_mode = 3
anchors_preset = 0
offset_right = 280.0
offset_bottom = 24.0
script = ExtResource("1_ndwdf")

[node name="id" type="Panel" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0

[node name="id_value" type="Label" parent="id"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "9"
label_settings = SubResource("LabelSettings_sqt2l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="sprite" type="Panel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 80.0
offset_bottom = 24.0

[node name="sprite_value" type="TextureRect" parent="sprite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 2

[node name="weight_value" type="Label" parent="sprite"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -10.0
offset_right = -2.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "1~"
label_settings = SubResource("LabelSettings_tn1ex")
horizontal_alignment = 1

[node name="name" type="Panel" parent="."]
layout_mode = 0
offset_left = 80.0
offset_right = 120.0
offset_bottom = 24.0

[node name="name_value" type="Label" parent="name"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ZAZA"
label_settings = SubResource("LabelSettings_iyqur")
horizontal_alignment = 1
vertical_alignment = 1

[node name="dmg" type="Panel" parent="."]
layout_mode = 0
offset_left = 120.0
offset_right = 144.0
offset_bottom = 24.0

[node name="dmg_title" type="Label" parent="dmg"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 10.0
grow_horizontal = 2
text = "DMG"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="dmg_value" type="Label" parent="dmg"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "9"
label_settings = SubResource("LabelSettings_sqt2l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="rte" type="Panel" parent="."]
layout_mode = 0
offset_left = 144.0
offset_right = 184.0
offset_bottom = 24.0

[node name="rte_title" type="Label" parent="rte"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 10.0
grow_horizontal = 2
text = "RTE"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="rte_value" type="Label" parent="rte"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "9"
label_settings = SubResource("LabelSettings_sqt2l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="spc" type="Panel" parent="."]
layout_mode = 0
offset_left = 184.0
offset_right = 208.0
offset_bottom = 24.0

[node name="spc_title" type="Label" parent="spc"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 10.0
grow_horizontal = 2
text = "SPC"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="spc_value" type="Label" parent="spc"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "9"
label_settings = SubResource("LabelSettings_sqt2l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cap" type="Panel" parent="."]
layout_mode = 0
offset_left = 208.0
offset_right = 280.0
offset_bottom = 24.0

[node name="cap_title" type="Label" parent="cap"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 10.0
grow_horizontal = 2
text = "CAPACITY"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cap_value" type="Label" parent="cap"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "09 (69)"
label_settings = SubResource("LabelSettings_sqt2l")
horizontal_alignment = 1
vertical_alignment = 1
